# movie-reservation-system

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.override.yaml  docker-compose.yml  pyproject.toml  stripe.html
.github/workflows/: ci.yml
app/: celery.py  conftest.py  database.py  main.py  scheduler.py  settings.py
app/alembic/: env.py
app/alembic/versions/: 1981b6ab8a24_add_has_paid_for_reservation.py  37766fdac85c_create_room_table.py  4161ddbf2286_add_status_field.py  443438f7a928_create_room_and_seat_tables.py  569fcfafc8de_remove_has_paid_field.py  60f0682fd70f_add_created_at_for_reservation.py  7b7b939a117d_create_showtime_table.py  88b07e8c8fe8_add_reservation_table.py  8a3d7fc2595c_add_room_to_showtime_table.py  8e5b4052dbae_create_user_table.py  ac456404261c_remove_status_choices.py  b34457d0cedd_add_provider_payment_id_field.py  ca34ab7c74be_create_category_table.py  ca34ab7c74be_create_genre_table.py  dab605a77cf4_create_seat_table.py  dd6e2f0f41bd_create_movie_table.py
app/api/: deps.py  main.py
app/auth/actions/: authenticate.py
app/auth/application/: authenticate.py
app/auth/domain/: entities.py  exceptions.py  token.py
app/auth/infrastructure/: responses.py  schemas.py
app/movies/actions/: add_movie_genre.py  create_movie.py  remove_movie_genre.py  retrieve_all_movies.py  retrieve_categories.py  retrieve_movie.py  update_movie.py
app/movies/application/: add_movie_genre.py  create_movie.py  delete_movie.py  remove_movie_genre.py  retrieve_genres.py  retrieve_movie.py  retrieve_movies.py  update_movie.py
app/movies/domain/: entities.py  exceptions.py  genre.py  movie.py  movie_showtime.py  poster_image.py
app/movies/infrastructure/: models.py
app/payments/domain/: exceptions.py  reservation.py
app/reservations/application/: cancel_reservation.py  create_reservation.py  release_reservation.py  reservation_release.py  retrieve_reservations.py
app/reservations/domain/: events.py  exceptions.py  movie_reservation.py  movie_show_reservation.py  reservation.py  seat.py
app/reservations/infrastructure/: models.py  tasks.py
compose/backend/: Dockerfile  entrypoint  start
(+266 files in other folders)
