[project]
name = "app"
version = "0.1.0"
description = "System that allows users to reserve movie tickets"
authors = [
    {name = "rsolanodev", email = "rubensoljim@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.3",
    "bcrypt>=4.2.0",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "emails>=0.6",
    "fastapi>=0.115.2",
    "gunicorn>=23.0.0",
    "httpx>=0.27.2",
    "jinja2>=3.1.4",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.0.0",
    "psycopg[binary]>=3.2.3",
    "pydantic-settings>=2.6.0",
    "pydantic>=2.9.2",
    "pyjwt>=2.9.0",
    "python-multipart>=0.0.12",
    "redis>=5.1.1",
    "sentry-sdk[fastapi]>=2.17.0",
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.22",
    "tenacity>=9.0.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.uv]
dev-dependencies = [
    "celery-types>=0.22.0",
    "freezegun>=1.5.1",
    "mypy>=1.12.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-mock>=3.14.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.7.0",
    "types-passlib>=1.7.7.20240819",
    "types-sqlalchemy-utils>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = ["alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.utils"
]
